# car-collision-simulator

./: README.md  pyproject.toml
src/: app.py  button.py  car.py  text_box.py
